infra/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-service
  namespace: messaging-app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
